# DESWOMAN

./: Dockerfile  Main_run_part1.py  Main_run_part2.py  Main_run_part3.py  README.md  Retrieve_validated_nc_homologs.py  Strategy.setup  module_assess_input.py  module_blast_and_diamond.py  module_generate_outgroup_dict.py  module_gffread_extract_and_rec_blast.py  module_global_alignment_properties.py  module_handle_strat3_hits.py  module_lower_intron.py  module_my_bedtool.py  module_orfs.py  module_orfs_old.py  module_output_part1.py  module_prepare_global_alignment.py  module_reformat_dico_with_IDs.py  module_select_orphans.py  module_sort_gff_gene_order.py  module_store_all_nc_hits.py  module_synteny.py  module_transcripts_data_and_threeshold.py  module_unspliced_orfs.py  pyproject.toml  safe_strat_1.setup
deswoman/: Main_run_part1.py  Main_run_part2.py  Main_run_part3.py  deswoman_runner.py  module_blast_and_diamond.py  module_global_alignment_properties.py  module_graphical_interface_strat2.py  module_handle_config_file.py  module_input_checking_strat1.py  module_my_bedtool.py  module_prepare_global_alignment.py  module_sort_gff_gene_order.py  module_store_all_nc_hits.py  module_synteny.py  module_transcripts_data_and_threeshold.py  module_unspliced_orfs.py
deswoman_src/: DESwoMAN.py  Main_run_part1.py  Main_run_part2.py  Main_run_part3.py  module_blast_and_diamond.py  module_colors.py  module_generate_outgroup_dict.py  module_gffread_extract_and_rec_blast.py  module_global_alignment_properties.py  module_graphical_interface_strat1.py  module_graphical_interface_strat2.py  (+18 more)
(+30 files in other folders)
